jsb 3장 기능 구현완료